[package]
name = "md2png"
version = "1.2.0"
edition = "2021"

[dependencies]
arboard = "3.3"
headless_chrome = { version = "1.0", default-features = false }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
msgbox = "0.7"
winreg = "0.52"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"